# NeoGrammarGraph

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  custom_matrix_mult.py  custom_matrix_mult_2.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  test-gg.yml
src/neo_grammar_graph/: __init__.py  dtree.py  gg.py  helpers.py  nodes.py  type_defs.py
tests/: test_doctests.py  test_gg.py
