[metadata]
name = neo_grammar_graph
version = attr: neo_grammar_graph.__version__
author = Dominic Steinhöfel
author_email = dominic.steinhoefel@cispa.de
description = Graphs from Context-Free Grammars.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rindPHI/NeoGrammarGraph
project_urls =
    Bug Tracker = https://github.com/rindPHI/NeoGrammarGraph/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
     numpy>=1.24.2
     proxyorderedset>=0.3.2
     scipy>=1.10.1

[options.extras_require]
test =
    pytest-pycharm>=0.7.0
    pytest-xdist==2.5.0
    pytest>=6.2.5
    pytest-cov>=3.0.0
    pytest-html>=3.1.1
    pytest-randomly>=3.12.0
dev =
    black>=22.8.0
    build>=0.8.0
    flake8>=5.0.4
    twine>=4.0.1

[options.packages.find]
where = src
